P01/Tests/SyntaxErrors/statenames5.tm
states 3
*
$ +
& -
alphabet 1 #
